<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/use_center_contain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/user_center_info_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/avatar_magin_top"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/user_center_btn_login"
        android:layout_width="@dimen/user_center_btn_login_width"
        android:layout_height="@dimen/user_center_btn_login_height"
        android:layout_below="@+id/user_center_info_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/user_center_btn_login_marginTop"
        android:background="@drawable/center_login_bg"
        android:text="@string/login"
        android:textColor="@color/white_bg"
        android:textSize="@dimen/dp15_textsize" />

    <include
        android:id="@+id/user_center_card_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_center_info_avatar"
        layout="@layout/user_center_head" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_center_head_height" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/user_center_layout_business_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_center_item_height"
                android:layout_marginLeft="@dimen/user_center_card_magin_left" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_item_divider" />

                <ImageView
                    android:id="@+id/user_center_business_icon"
                    android:layout_width="@dimen/dp10"
                    android:layout_height="@dimen/dp10"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/card" />

                <TextView
                    android:id="@+id/user_center_text_business_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/user_center_card_text_padding"
                    android:layout_toRightOf="@+id/user_center_business_icon"
                    android:text="@string/business_card"
                    android:textColor="@color/black_bg"
                    android:textSize="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_center_layout_homepage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_center_item_height" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/user_center_card_magin_left"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_item_divider" />

                <TextView
                    android:id="@+id/user_center_text_my_homepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/user_center_homepage_magin_left"
                    android:drawableLeft="@drawable/user_center_dot"
                    android:drawablePadding="@dimen/dp10"
                    android:text="@string/my_homepage"
                    android:textColor="@color/black_bg"
                    android:textSize="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_center_layout_find"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_center_item_height"
                android:layout_marginLeft="@dimen/user_center_homepage_magin_left" >

                <ImageView
                    android:id="@+id/user_center_divider3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_item_divider" />

                <TextView
                    android:id="@+id/user_center_text_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/user_center_dot"
                    android:drawablePadding="@dimen/dp10"
                    android:text="@string/search_card"
                    android:textColor="@color/black_bg"
                    android:textSize="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_center_layout_message_center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_center_item_height"
                android:layout_marginLeft="@dimen/user_center_homepage_magin_left" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_item_divider" />

                <TextView
                    android:id="@+id/user_center_text_message_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/user_center_dot"
                    android:drawablePadding="@dimen/dp10"
                    android:text="@string/message_center"
                    android:textColor="@color/black_bg"
                    android:textSize="@dimen/dp15" />

                <ImageView
                    android:id="@+id/user_center_has_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/dp10"
                    android:layout_toRightOf="@id/user_center_text_message_center"
                    android:contentDescription="@null"
                    android:src="@drawable/user_center_message"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_center_layout_fav"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_center_item_height"
                android:layout_marginLeft="@dimen/user_center_card_magin_left"
                android:layout_marginTop="@dimen/user_center_fav_margin_top" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_item_divider" />

                <ImageView
                    android:id="@+id/user_center_fav_icon"
                    android:layout_width="@dimen/dp10"
                    android:layout_height="@dimen/dp10"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/center_fav" />

                <TextView
                    android:id="@+id/user_center_text_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/user_center_card_text_padding"
                    android:layout_toRightOf="@+id/user_center_fav_icon"
                    android:text="@string/my_fav"
                    android:textColor="@color/black_bg"
                    android:textSize="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_center_layout_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_center_item_height"
                android:layout_marginLeft="@dimen/user_center_card_magin_left"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_item_divider" />

                <ImageView
                    android:id="@+id/user_center_setting_icon"
                    android:layout_width="@dimen/dp10"
                    android:layout_height="@dimen/dp10"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/user_center_text_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/user_center_card_text_padding"
                    android:layout_toRightOf="@+id/user_center_setting_icon"
                    android:text="@string/user_setting"
                    android:textColor="@color/black_bg"
                    android:textSize="@dimen/dp15" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>